--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules
 .env
 
-client/.env
+client/.env.development
 client/.env.production
 client/node_modules
+client/.gitignore
+client/README.md
+
+
