--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,6 +11,9 @@ node_modules
 dist-ssr
 *.local
 
+.env.development
+.env.production
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
